<resources>
    <string name="app_name">Drink Drank Drunk</string>
    <string name="done">Done</string>
    <string name="indtast_v_gt">Indtast vægt</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hej"></string>
    <string name="du_m_gerne_k_re_bil">Du må gerne køre bil</string>
    <string name="test_promil">test_promil</string>
    <string name="textview">TextView</string>
    <string name="Drinks"></string>
    <string name="bluetooth_adresser">bluetooth_adresser</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="frontpage">FrontPage</string>
    <string name="discover">Discover</string>
    <string name="discoverability">Discoverability</string>
    <string name="on_off">ON/OFF</string>
    <string name="start_connection">Start Connection</string>
    <string name="send">SEND</string>
    <string name="incoming_text_message">Incoming text message</string>
    <string name="papir">Papir</string>
    <string name="saks">Saks</string>
    <string name="sten">Sten</string>
</resources>
